Fix missing border on Phy `list-groups`

--- a/src/scss/common/list-groups.scss
+++ b/src/scss/common/list-groups.scss
@@ -25,9 +25,5 @@
       text-decoration: none;
       position: relative;
     }
-
-    &:last-of-type {
-      border-width: 0;
-    }
   }
 }
