--- a/src/scss/cs/list-groups.scss
+++ b/src/scss/cs/list-groups.scss
@@ -20,16 +20,22 @@
     border-left: 1px solid $cs-list-outline-gray;
   }
 
-  li a {
-    font-size: 1.25rem;
+  li {
+    &:last-of-type {
+      border-width: 0;
+    }
 
-    > span:first-of-type {
-      display: inline-block;
-      border-right: 1px solid $gray-107;
-      margin-right: 1rem;
-      padding-right: 1rem;
-      text-align: center;
-      min-width: 3.4rem;
+    a {
+      font-size: 1.25rem;
+
+      > span:first-of-type {
+        display: inline-block;
+        border-right: 1px solid $gray-107;
+        margin-right: 1rem;
+        padding-right: 1rem;
+        text-align: center;
+        min-width: 3.4rem;
+      }
     }
   }
 }
